feat: Add authentication and user management entities and services

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/api
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/retifica_renova
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -33,6 +33,8 @@ logging.level.org.springframework.security=DEBUG
 # TODO: Configure JWT secret key, expiration time, etc
 jwt.secret=your-secret-key-here
 jwt.expiration=86400000
+jwt.refresh-expiration=604800000
+jwt.issuer=retifica-renova
 
 # CORS Configuration
 # TODO: Configure allowed origins, methods, headers
@@ -45,3 +47,10 @@ cors.allow-credentials=true
 # TODO: Configure MelhorEnvio API credentials
 melhorenvio.api.url=https://sandbox.melhorenvio.com.br/api/v2
 melhorenvio.api.token=your-token-here
+
+# Google OAuth2
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_OAUTH_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
